--- a/css/style-form.css
+++ b/css/style-form.css
@@ -32,10 +32,11 @@
     margin: 0;
     padding: 0;
   }
-  
-  header {
-    padding: 0.6rem 2.2rem;
-    margin-top: 0;
-    background: var(--bg-white);
-    box-shadow: 0px 2px 10px rgba(100, 100, 100, 0.1);
+  section.form-sec {
+    background: pink;
   }
+  input {
+    padding: 10pt 20pt;
+  }
+    
+  
