--- a/scripts/style-home.css
+++ b/scripts/style-home.css
@@ -392,9 +392,9 @@ div.contact {
 .foot-ic {
   margin-right: 0.2rem;
 }
-.contact-links > a {
+/* .contact-links > a {
   
-}
+} */
 /* beta */
 input.ip-txt, #submit {
   margin: auto;
