--- a/css/signup.css
+++ b/css/signup.css
@@ -32,6 +32,15 @@
     width: 100%;
     padding: 0.6rem 2.2rem;
   }
+  div.form-title {
+    padding: 0.6rem;
+    margin-bottom: 0.8rem;
+    text-align: center;
+  }
+  h2.form-title-h {
+    font-weight: 300;
+    color: #333;
+  }
   div.form-cont {
     background: pink;
     width: 35%;
@@ -44,11 +53,11 @@
   input[type="text"] {
     min-width: 60%;
     padding: 10px 20px;
-    margin: 0 auto 0.8rem;
+    margin: 0 auto 1.2rem;
   }
   .create-acc-btn { 
     min-width: 60%;
-    max-width: 60%;
+    width: 60%;
     margin: auto;
     color: var(--sub-white);
     background: var(--defcol);
@@ -58,4 +67,13 @@
   input[type="text"], .create-acc-btn {
     display: block;
     border: none;
+  }
+@media (max-width: 700px) {
+  div.form-cont {
+    width: 80%;
+  }
+  input[type="text"], .create-acc-btn {
+    width: 100%;
+    min-width: 100%;
+  }
   }
