--- a/css/welcome.css
+++ b/css/welcome.css
@@ -89,14 +89,26 @@
     z-index: 99;
     height: 100vh;
     width: 32%;
-    background: var(--bg-white);
+    background: #ffffff70;
     display: flex;
     align-items: center;
+    flex-flow: column wrap;
+  }
+  div.nav-cls-div {
+    width: 100%;
+    padding: 0.8rem;
+    background: #000;
+  }
+  div.form-title-div {
+    border: 1px solid #333;
+  }
+  div.form-title-div > h1 {
+    color: #222;
   }
   div.sidebar-form-cont {
     width: 100%;
     min-height: 200px;
-    background: tan;
+    background: none;
     padding: 0.8rem;
     display: flex;
     justify-content: center;
@@ -117,12 +129,51 @@
     margin: 0 auto 1.2rem;
     max-width: 220px;
     display: block;
+    width: 220px;
   }
   .ip-login {
-    display: block;
+    color: var(--sub-white);
+    background: var(--defcol);
+    border: none;
+  }
+  .ip-login, a.sign-up {
     padding: 8px 20px;
     max-width: 220px;
+    font: 400 1rem var(--deffont);
+    max-width: 220px;
+    width: 220px;
+    display: block;
+    margin: auto;
   }
+div.sign-up-cont {
+  background: none;
+  text-align: center;
+  
+}
+div.sign-up-cont > p{
+  color: #222;
+}
+a.sign-up {
+  text-decoration: none;
+  color: var(--defcol);
+  background: none;
+  border: 1px solid var(--defcol);
+}
+div.query-div {
+  background: none;
+  margin-top: 180px;
+}
+div.query-div > a {
+  display: flex;
+  align-items: center;
+  color: var(--defcol);
+  text-decoration: none;
+}
+.a-label {
+  margin-left: 0.4rem;
+}
+  /* end article/ sidebar */
+
   section.sec1 {
     grid-area: sec1;
     background: none;
