--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    outline: none;
   }
   ::-webkit-scrollbar, ::-moz-scrollbar, ::scrollbar {
     opacity: 0;
@@ -264,8 +265,9 @@ div.query-div > a {
   .foot-ic {
     margin-right: 0.2rem;
   }
+
   .contact-links > a {
-    font-size: inherit;
+    font-size: 0.8rem;
   }
   /* flexset 1 end */
 @media (max-width: 700px) {
@@ -285,7 +287,7 @@ div.query-div > a {
     
     header {
         position: relative;
-        z-index: 69;
+        z-index: 9;
         padding: 0 1.6rem;
         margin-top: 1.6rem;
         background: none;
@@ -296,7 +298,10 @@ div.query-div > a {
         min-width: auto;
       }
       aside.sidebar {
-        width: 100%;
+        width: 0;
+      }
+      .ip-login, a.sign-up {
+        font: 400 0.8rem var(--deffont);
       }
       div.sidebar-form-cont {
         width: 100%;
@@ -312,15 +317,16 @@ div.query-div > a {
         text-align: center;
       }
       .intro-h {
-        font-size: 2.8rem;
+        font-size: 2.4rem;
         text-align: center;
       }
       .intro-p {
         font-size: 0.8rem;
       }
       a.intro-cta {
+        font: 400 0.88rem var(--deffont);
         margin: auto;
-        min-width: 100%;
+        min-width: 68%;
         padding: 10px 20px;
         justify-content: center;
       }
