--- a/css/welcome.css
+++ b/css/welcome.css
@@ -100,8 +100,8 @@
   }
   div.nav-cls-div {
     width: 100%;
-    padding: 0.8rem;
-    
+    padding: 0.6rem;
+    background: none;
   }
   .cls-btn {
     width: 48px;
@@ -112,17 +112,19 @@
   }
   div.form-title-div {
     border: none;
+    background: none;
   }
   div.form-title-div > h1 {
     color: #222;
   }
   div.sidebar-form-cont {
     width: 100%;
-    min-height: 200px;
     background: none;
     padding: 0.8rem;
     display: flex;
     justify-content: center;
+
+    background: none;
   }
   form.sidebar-form {
     display: flex;
@@ -130,13 +132,15 @@
     width: auto;
     justify-content: center;
     flex-flow: column wrap;
+
+    background: none;
   }
   form.sidebar-form > label {
     display: block;
   }
   .ip-text {
     font: 400 1rem  var(--textcol);
-    padding: 8px 20px;
+    padding: 0.6rem;
     margin: 0 auto 1.2rem;
     max-width: 220px;
     display: block;
@@ -149,7 +153,7 @@
     border: none;
   }
   .ip-login, a.sign-up {
-    padding: 8px 20px;
+    padding: 0.6rem;
     max-width: 220px;
     font: 400 1rem var(--deffont);
     max-width: 220px;
@@ -173,7 +177,7 @@ a.sign-up {
 }
 div.query-div {
   background: none;
-  margin-top: 180px;
+  margin-top: 3.5rem;
 }
 div.query-div > a {
   display: flex;
@@ -356,6 +360,11 @@ div.query-div > a {
       
       a.intro-cta {
         max-width: 50%;
+      }
+      aside.sidebar {
+        height: auto;
+        min-height: 100vh;
+        width: 0;
       }
     }
 /* Document Load Animation */
