--- a/css/style-hotel.css
+++ b/css/style-hotel.css
@@ -54,9 +54,9 @@ div.logo-container {
   color: #1add9f;
 }
 a.logo {
-  font: 100 16pt var(--deffont);
+  font: 600 18pt var(--deffont);
   text-decoration: none;
-  color: var(--defcol);
+  color: var(--textcol);
 }
 div.nav-profile {
   display: flex;
@@ -229,12 +229,12 @@ div.loc-details > p, div.loc-details > span {
 }
 div.loc-details > p {
   color: var(--defcol);
-  font: 500 1rem var(--deffont);
+  font: 500 1.rem var(--deffont);
   margin: 0 0 0.2rem;
   color: #fafafa;
 }
 div.loc-details > span {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   display: block;
   margin: 0;
   color: #efefef;
@@ -349,7 +349,7 @@ div.img-cont > img {
   height: 160px;
   justify-content: center;
   font-size: 1.2rem;
-  background: #11111160;
+  background: #11111190;
   text-decoration: none;
   text-align: center;
   position: absolute;
@@ -398,7 +398,8 @@ div.contact {
 .contact-links > a {
   font-size: inherit;
 }
-@media (max-width: 670px) {
+
+@media (max-width: 700px) {
   .mic-n {
     font-size: 1.4rem;
   }
@@ -454,7 +455,7 @@ div.cards {
   width: 100%;
 }
 div.loc-details > p {
-  font: 600 1rem def;
+  font: 600 1rem var(--deffont);
 }
 div.loc-details > span {
   font-size: 0.8rem;
