--- a/css/style-hotel.css
+++ b/css/style-hotel.css
@@ -34,9 +34,6 @@ body {
 }
 
 header {
-  position: sticky;
-  top: 0;
-  z-index: 4;
   padding: 0.6rem 2.2rem;
   margin-top: 0;
   background: var(--bg-white);
@@ -114,6 +111,7 @@ aside.sidebar {
   align-items: center;
   flex-flow: column wrap;
   transition: 0.2s linear;
+  box-shadow: 5px 4px 200px #fff;
 }
 div.nav-cls-div {
   width: 100%;
@@ -149,7 +147,7 @@ div.suggestions .show-more {
   z-index: 2;
   height: 50px;
   text-decoration: none;
-  background: var(--f-white);
+  background: var(--bg);
   align-items: center;
 }
 
@@ -445,6 +443,11 @@ div.contact {
   .mic-n {
     font-size: 1.4rem;
   }
+
+  aside.sidebar {
+    height: 100vh;
+  }
+
   header {
     padding: 0.6rem 1.6rem;
     margin-top: 1.6rem;
@@ -460,9 +463,6 @@ div.contact {
     display: none;
   }
 
-  aside.sidebar {
-    height: 100vh;
-  }
 section.sec-1 {
   padding: 0 1.6rem;
   margin-top: 1.6rem;
