--- a/css/style-hotel.css
+++ b/css/style-hotel.css
@@ -25,7 +25,15 @@
 .mi-n {
   padding-top: 3.6px;
 }
+.a-label {
+  margin-left: 0.4rem;
+}
 body {
+  display: grid;
+  grid-template: "hd hd hd as" auto
+                  "mn mn mn as" auto
+                  "ft ft ft as" auto 
+                  / 1fr 1fr auto;
   font: 400 14px var(--deffont);
   background: var(--bg);
   color: var(--textcol);
@@ -34,6 +42,7 @@ body {
 }
 
 header {
+  grid-area: hd;
   padding: 0.6rem 2.2rem;
   margin-top: 0;
   background: var(--bg-white);
@@ -99,36 +108,72 @@ div.avatar {
 }
 /* flexset 1 end */
 
-/* Sidebar / navbar */
-aside.sidebar {
-  position: fixed;
-  right: 0;
-  z-index: 19;
-  height: 100vh;
-  width: 0;
-  background: var(--bg-white);
+aside, div.account-card, .acc-link, .acc-avatar {
   display: flex;
-  align-items: center;
-  flex-flow: column wrap;
-  transition: 0.2s linear;
-  box-shadow: 5px 4px 200px #fff;
 }
-div.nav-cls-div {
-  width: 100%;
-  background: none;
+aside {
+  grid-area: as;
+  background: var(--bg-white);
+  flex-flow: column wrap;  
 }
-.cls-btn {
-  width: 48px;
-  height: 48px;
-  padding: 0.6rem;
-  background: none;
-  border: none;
+aside a {
+  text-decoration: none;
+}
+div.aside-cont {
+  position: sticky;
+  top: 0;
+  bottom: 0;
+  z-index: 99;
+}
+div.account-card {
+ width: 100%;
+ background: pink;
+ padding: 2.2rem 0.8rem;
+ justify-content: center;
+}
+.acc-link {
+  text-decoration: none;
   color: var(--textcol);
 }
-
+.acc-avatar {
+  background: pink;
+  max-width: 4.0rem; 
+  max-height: 4.0rem;
+  height: 4.0rem;
+  width: 4.0rem;
+  border-radius: 50px;
+}
+img.user-dp {
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+}
+div.nav-cont {
+  background: var(--bg-white);
+  position: relative;
+  width: 200px;
+  max-width: 200px;
+}
+div.nav-cont > a {
+    padding: 0.6rem 1.2rem;
+    font: 400 1rem var(--deffont);
+    background: var(--bg-white);
+    color: var(--textcol);
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin: 0.8rem 0 0;
+}
+.nav-label {
+  margin-left: 0.4rem;
+}
+main {
+  grid-area: mn;
+  margin: 0;
+  padding: 0;
+}
 section {
   padding: 0 2rem 1.6rem;
-  
 }
 /* flexset 2 */
 div.search-items, div.suggestions, .sugg-links, div.search, .show-more {
@@ -145,7 +190,7 @@ div.suggestions .show-more {
   position: absolute;
   right: 0;
   z-index: 2;
-  height: 50px;
+  height: 3.2rem;
   text-decoration: none;
   background: var(--bg);
   align-items: center;
@@ -167,8 +212,8 @@ div.suggestions {
   display: none;
 }
 .sugg-links {
-  min-width: 100px;
-  height: 50px;
+  width: 6.5rem;
+  height: 3.2rem;
   margin-right: 0.8rem;
   position: relative;
   justify-content: center;
@@ -176,10 +221,12 @@ div.suggestions {
 }
 .sugg-links .label {
   position: absolute;
+  padding: 0.6rem;
   z-index: 1;
   color: #f1f1f1;
   text-shadow: 2px 1px 6px rgba(1, 1, 1, 0.4);
   letter-spacing: 1px;
+  font-size: 0.8rem;
 }
 .sugg-links > img {
   width: 100%;
@@ -202,16 +249,15 @@ input.srch-bar {
 input.srch-bar, button.srch-sub {
   min-height: 48px;
   max-height: 48px;
-  
 }
 input.srch-bar::placeholder {
   font-size: 1rem;
   color: var(--textcol);
 }
 button.srch-sub {
+  min-width: 48px;
   padding: 0.4rem;
   margin-left: 0.2rem;
-  min-width: 48px;
   background: var(--defcol);
   color: var(--sub-white);
   border: none;
@@ -265,7 +311,7 @@ div.loc-details {
   color: #fefeff;
 }
 div.loc-details > p, div.loc-details > span {
-  text-shadow: -1px 2px 8px rgba(1, 1, 1, 0.6);
+  text-shadow: -1px 2px 8px rgba(99, 99, 122, 0.8);
 }
 div.loc-details > p {
   color: var(--defcol);
@@ -297,7 +343,7 @@ a.view-more {
   display: block;
   margin: auto;
   text-decoration: none;
-  padding: 12px 20px;
+  padding: 0.6rem 2.2rem;
   width: 30%;
   color: var(--defcol);
   border: 1px solid var(--defcol);
@@ -379,16 +425,16 @@ div.img-cont {
   overflow: hidden;
 }
 div.img-cont > img {
-  max-width: 160px;
-  max-height: 160px;
-  height: 160px;
-  width: 160px;
+  max-width: 30%;
+  max-height: 30%;
+  height: 30%;
+  width: 30%;
 }
 .gallery-link {
-  width: 160px;
-  height: 160px;
+  width: 30%;
+  height: 100%;
   justify-content: center;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   background: #11111190;
   text-decoration: none;
   text-align: center;
@@ -398,12 +444,14 @@ div.img-cont > img {
   color: var(--bg-white);
 }
 mi-img {
-  font-size: 2.2rem;
+  font-size: 2.0rem;
 }
 
 footer {
+  width: 100%;
+  grid-area: ft;
   background: #11171F;
-  padding: 1.6rem 2rem;
+  padding: 1.6rem 2.2rem 4.4rem;
 }
 div.contact {
   display: flex;
@@ -439,22 +487,55 @@ div.contact {
   font-size: inherit;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 762px) {
   .mic-n {
     font-size: 1.4rem;
   }
-
-  aside.sidebar {
-    height: 100vh;
+  body {
+   display: grid;
+   grid-template: "hd hd hd hd" auto
+                  "mn mn mn mn" auto
+                  "as as as as" auto
+                  "ft ft ft ft" auto
+                  / 1fr 1fr 1fr 1fr;
   }
-
   header {
     padding: 0.6rem 1.6rem;
     margin-top: 1.6rem;
     background: none;
     box-shadow: none;
   }
-  
+  aside {
+    background: yellow;
+    position: fixed;
+    z-index: 999;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  div.account-card {
+    display: none;
+  }
+  div.nav-cont {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 100%;
+  }
+  div.nav-cont > a{
+    width: auto;
+    flex-flow: column wrap;
+    justify-content: center;
+    margin: 0;
+    background: transparent;
+  }
+  .nav-label {
+    display: block;
+    font-size: 0.6rem;
+    margin: 0;
+  }
+
   div.logo-container {
     min-width: auto;
   }
@@ -475,6 +556,13 @@ div.suggestions {
   margin-top: 1.6rem;
   width: 100%;
 }
+.show-more {
+  height: 2.8rem;
+}
+.sugg-links {
+  width: 5.2rem;
+  height: 2.8rem;
+}
 div.search {
   min-width: 100%;
   padding: 0;
@@ -486,8 +574,8 @@ input.srch-bar {
 }
 button.srch-sub {
   padding: 0.6rem;
-  width: 42px;
   height: 42px;
+  width: 42px;
 }
 section.sec-2 {
   margin-top: 1.6rem;
@@ -522,20 +610,61 @@ div.news-content-1 {
   flex-flow: column wrap;
   justify-content: center;
 }
-div.img-cont > img, .gallery-link {
-  max-width: 120px;
-  max-height: 120px;
-  height: 120px;
-  width: 120px;
+div.img-cont > img {
+  max-width: 30%;
+  max-height: 30%;
+  height: 30%;
+  width: 30%;
+}
+.gallery-link {
+  height: 100%;
+  width: 30%;
+}
+mi-img {
+  font-size: 1.2rem;
 }
 .loc-det-cont, .gallery-cont {
   width: 100%;
   padding: 0 1.6rem;
 }
 footer {
-  padding: 1.6rem 1rem;
+  padding: 1.6rem 1rem 6.6rem;
 }
 .social-links, .contact-links {
   width: auto;
   }
+}
+
+/* ****** Tablets and wider scrns ****** */
+
+@media screen and (min-width: 762px) and (max-width: 900px) {
+  body {
+    display: grid;
+    grid-template: "hd hd hd as" auto
+                  "mn mn mn as" auto
+                  "ft ft ft as" auto 
+                  / auto auto auto;
+  }
+  div.img-cont > img {
+  max-width: 30%;
+  max-height: 30%;
+  height: 30%;
+  width: 30%;
+}
+.gallery-link {
+  height: 100%;
+  width: 30%;
+  font-size: 1.4rem;
+}
+mi-img {
+  font-size: 1.2rem;
+}
+div.nav-cont {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 100%;
+}
+
 }
