--- a/css/style-hotel.css
+++ b/css/style-hotel.css
@@ -46,10 +46,9 @@ header {
   padding: 0.6rem 2.2rem;
   margin-top: 0;
   background: var(--bg-white);
-  box-shadow: 0px 2px 10px rgba(100, 100, 100, 0.1);
 }
 /* flexset 1 */
-nav.nav-panel, div.logo-container, div.top-nav, div.avatar {
+nav.nav-panel, div.logo-container, div.top-nav {
   display: flex;
   align-items: center;
 }
@@ -94,17 +93,19 @@ div.avatar {
   width: 46px;
   height: 46px;
   padding: 0;
-  
+  display: none;
+  align-items: center;
   justify-content: center;
 }
 .avatar-ico {
   transform: scale(2.2);
+  display: none;
 }
 .avatar > img {
-  width: 46px;
-  height: 46px;
+  width: 3.2rem;
+  height: 3.2rem;
   border-radius: 50%;
-  display: none;
+  display: block;
 }
 /* flexset 1 end */
 
@@ -114,7 +115,8 @@ aside, div.account-card, .acc-link, .acc-avatar {
 aside {
   grid-area: as;
   background: var(--bg-white);
-  flex-flow: column wrap;  
+  flex-flow: column wrap;
+  box-shadow: 0px 2px 10px rgba(100, 100, 100, 0.2);  
 }
 aside a {
   text-decoration: none;
@@ -127,16 +129,24 @@ div.aside-cont {
 }
 div.account-card {
  width: 100%;
- background: pink;
+ background: var(--bg);
  padding: 2.2rem 0.8rem;
  justify-content: center;
 }
 .acc-link {
   text-decoration: none;
   color: var(--textcol);
+  flex-flow: column wrap;
+  justify-content: center;
+  text-align: center;
+}
+.avatar-title {
+  margin-top: 0.8rem;
+  font: 500 1rem var(--deffont);
+  display: block;
 }
 .acc-avatar {
-  background: pink;
+  background: transparent;
   max-width: 4.0rem; 
   max-height: 4.0rem;
   height: 4.0rem;
@@ -155,7 +165,7 @@ div.nav-cont {
   max-width: 200px;
 }
 div.nav-cont > a {
-    padding: 0.6rem 1.2rem;
+    padding: 0.8rem 1.2rem;
     font: 400 1rem var(--deffont);
     background: var(--bg-white);
     color: var(--textcol);
@@ -164,6 +174,12 @@ div.nav-cont > a {
     width: 100%;
     margin: 0.8rem 0 0;
 }
+
+div.nav-cont > a:hover,
+div.nav-cont > a:focus {
+  color: var(--defcol);
+}
+
 .nav-label {
   margin-left: 0.4rem;
 }
@@ -430,11 +446,14 @@ div.img-cont > img {
   height: 30%;
   width: 30%;
 }
+div.img-cont > img:hover {
+  transform: scale(1.6);
+}
 .gallery-link {
   width: 30%;
   height: 100%;
   justify-content: center;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   background: #11111190;
   text-decoration: none;
   text-align: center;
@@ -504,6 +523,9 @@ div.contact {
     margin-top: 1.6rem;
     background: none;
     box-shadow: none;
+  }
+  div.avatar {
+    display: flex;
   }
   aside {
     background: yellow;
@@ -619,6 +641,7 @@ div.img-cont > img {
 .gallery-link {
   height: 100%;
   width: 30%;
+  font-size: 1rem;
 }
 mi-img {
   font-size: 1.2rem;
@@ -645,6 +668,9 @@ footer {
                   "ft ft ft as" auto 
                   / auto auto auto;
   }
+  div.avatar {
+    display: none;
+  }
   div.img-cont > img {
   max-width: 30%;
   max-height: 30%;
@@ -654,7 +680,7 @@ footer {
 .gallery-link {
   height: 100%;
   width: 30%;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 mi-img {
   font-size: 1.2rem;
