--- a/css/signup.css
+++ b/css/signup.css
@@ -1,40 +1,34 @@
-/* 
-* author: AdvoidhB
-* for: "Travelogue TM"
-* date: 20-aug-2022
-*/
+/* *****************************
+   * Author: Advoidh B
+   * for: Travelogue(TM) 
+   * Date: 29-10-2022
+***************************** */
 * {
-    box-sizing: border-box;
-  }
-  ::-webkit-scrollbar, ::-moz-scrollbar, ::scrollbar {
-    opacity: 0;
-    display: none;
-  }
-  :root {
-    --bg: #f4f1f1;
-    --cardbg: #f8f7f8;
-    --defcol: #05445e;
-    --textcol: #757785;
-    --f-white: #fffeff;
-    --bg-white: #fefefe;
-    --sub-white: #efefff;
-    
-    --deffont: "Figtree", sans-serif;
-  }
+  box-sizing: border-box;
+}
+
+:root {
+  --bg: #f4f1f1;
+  --cardbg: #f8f7f8;
+  --defcol: #05445e;
+  --textcol: #757785;
+  --f-white: #fffeff;
+  --bg-white: #fefefe;
+  --sub-white: #efefff;
+  --dark-card: #1B2232;
+  --deffont: "Figtree", sans-serif;
+}
   body {
     font: 400 14px var(--deffont);
-    background: var(--bg);
+    background: var(--bg) url(../images/hero-img.webp) center / cover no-repeat;
     color: var(--textcol);
     margin: 0;
     padding: 0;
   }
-  section.form-sec {
-    width: 100%;
-    padding: 0.6rem 2.2rem;
-  }
+
   div.form-title {
     padding: 0.6rem;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0rem;
     text-align: center;
   }
   h2.form-title-h {
@@ -42,35 +36,63 @@
     color: #333;
   }
   div.form-cont {
-    background: pink;
-    width: 35%;
+    background: rgba(255, 250, 250, 0.8);
+    width: 40%;
     padding: 0.6rem;
-    margin: auto;
+    margin: 20pt auto 0;
+    box-shadow: 2px 2px 20px rgba(28, 28, 65, 0.2);
+    
   }
   form.signup {
     font-size: inherit;
+    background: transparent;
+    margin: 0 auto;
+    width: 260px;
   }
-  input[type="text"] {
-    min-width: 60%;
-    padding: 10px 20px;
+  form.signup label {
+    margin-bottom: 0.4rem;
+    display: block;
+    color: var(--textcol);
+  }
+  input[type="text"], input[type="password"] {
     margin: 0 auto 1.2rem;
+    border: 0.1rem solid var(--defcol);
+    background: none;
+    font: 400 1rem var(--deffont);
+    color: var(--textcol);
   }
+
   .create-acc-btn { 
-    min-width: 60%;
-    width: 60%;
     margin: auto;
     color: var(--sub-white);
     background: var(--defcol);
     padding: 10px 20px;
     font-size: 0.9rem;
-  }
-  input[type="text"], .create-acc-btn {
-    display: block;
     border: none;
+    letter-spacing: 1px;
+  }
+
+  input[type="text"],input[type="password"], .create-acc-btn, .login-btn {
+    display: block;
+    padding: 10px 20px;
+    min-width: 260px;
+    width: 260px;
+    font: 400 1rem var(--deffont);
+  }
+  div.login {
+    text-align: center;
+  }
+  .login-btn {
+    display: block;
+    margin: 0.6rem auto;
+    width: 260px;
+    text-align: center;
+    text-decoration: none;
+    color: var(--defcol);
   }
 @media (max-width: 700px) {
   div.form-cont {
-    width: 80%;
+    width: 100%;
   }
   input[type="text"], .create-acc-btn {
     width: 100%;
