--- a/css/destination.css
+++ b/css/destination.css
@@ -6,6 +6,9 @@
 * {
     box-sizing: border-box;
   }
+  html {
+    font: 400 16px var(--fontdef);
+  }
   
   /* #### hide Scrollbars ####
   html {
@@ -39,7 +42,7 @@
     display: grid;
     grid-template: "sc mn" 100vh 
                     / 1fr 2fr;
-    font: 400 14px var(--fontdef);
+    font: 400 1rem var(--fontdef);
     background: var(--bg);
     color: var(--textsub);
     margin: 0;
@@ -54,12 +57,32 @@
 
   div.img-gallery {
     position: absolute;
-    z-index: 999;
+    z-index: 9;
     bottom: 0;
     left: 0;
     width: 100%;
+    height: 200px;
+    margin: 2rem 0 2rem;
+    background: none;
+  }
+ .img {
+    width: 100%;
+    height: 100%;
+    display: none;
+  }
+  .def-img {
+    display: block;
+  }
+  div.switch-cont {
+    position: absolute;
+    z-index: 11;
+    bottom: 0;
+    width: 100%;
+    background: white;
     padding: 0.6rem;
-    background: #000;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
   }
   main.right {
     grid-area: mn;
@@ -79,7 +102,6 @@
     padding: 0;
   }
   div.title-cont > p {
-    font-size: 1.0rem;
     color: var(--textsub);
     margin: 0.6rem 0;
     padding: 0;
@@ -87,7 +109,6 @@
   
   div.desc {
     background: var(--bgwhite);
-    font-size: 1.0rem;
     padding: 1.2rem 2.2rem 1.2rem 0;
   }
   p#desc {
@@ -138,6 +159,7 @@
         grid-template: "sc sc" auto
                        "mn mn" auto
                         / 2fr 2fr;
+        font: 400 0.88rem var(--fontdef);
     }
     section.left {
         min-height: 30vh;
